--- a/example/index.html
+++ b/example/index.html
@@ -63,6 +63,9 @@
 
     <!-- Example dependencies (not of interest) -->
     <script src="./mockup/lib/dat.gui.js"></script>
+    <script src="./mockup/lib/crel.js"></script>
+    <script src="./mockup/lib/FileSaver.js"></script>
+    <script src="../editor/FPEditor.js"></script>
     <script src="./mockup/ExampleUI.js"></script>
 
     <!-- Example/Reference -->
