--- a/editor/index.html
+++ b/editor/index.html
@@ -96,7 +96,7 @@
 
   </body>
 
-  <div id="wizard-elements" style="display: block; background-color: grey; border-top:1px solid #000;">
+  <div id="wizard-elements" style="display: none; background-color: grey; border-top:1px solid #000;">
     <div id="loadRef" style="color: #ffffff;">
       <p>Load reference 3D model:</p>
       <button id="loadBtn">Load file (ascii FBX)</button>
