--- a/example/index.html
+++ b/example/index.html
@@ -34,22 +34,22 @@
   
       .columns {
         height: 600px;
-        overflow: hidden;
       }
           
       .left {
-          width: 260px;
-          float: left;
-          background: #aaa;
-          height: 100%;
+        width: 280px;
+        float: left;
+        background: #bbb;
+        height: 100%;
+        overflow: scroll !important;
       }
   
       .right {
-          float: none;
-          background: #ccc;
-          width: auto;
-          height: 100%;
-          overflow: hidden;
+        float: none;
+        background: #efefef;
+        width: auto;
+        height: 100%;
+        overflow: hidden;
       }
   
       #fp-gui {
@@ -63,6 +63,7 @@
 
     <!-- Example dependencies (not of interest) -->
     <script src="./mockup/lib/dat.gui.js"></script>
+    <script src="./mockup/lib/datGUIExtensions.js"></script>
     <script src="./mockup/lib/crel.js"></script>
     <script src="./mockup/lib/FileSaver.js"></script>
     <script src="../editor/FPEditor.js"></script>
@@ -84,7 +85,7 @@
     <div class="columns">
       <div class="left">
         <div id="fp-gui">
-          <h2>Mockup UI</h2>
+          <h3>Mockup UI</h3>
         </div>
       </div>
       <div class="right">
