--- a/example/index-umd.html
+++ b/example/index-umd.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
-    <title>Freight Packer API example</title>
+    <title>Freight Packer API example - UMD</title>
 
-    <!-- API files, dependencies (3rd party code) and API -->
-    <script src="../build/FreightPacker-dev-dependencies.js" ></script>
-    <script src="../build/FreightPacker-dev.js" ></script>
+    <!-- API UMD -->
+    <script src="../build/FreightPacker-loader.js" ></script>
 
     <!-- Example (~UI) dependencies (not of interest) -->
     <script src="./mockup/lib/jquery-3.3.1.min.js"></script>
@@ -23,16 +22,6 @@
     <script src="./mockup/lib/houdini.js"></script>
     <script src="./mockup/lib/JSONFormatter.js"></script>
     <script src="./mockup/IO.js"></script>
-    <script src="./mockup/ExampleUI.js"></script>
-    <!--script src="./mockup/lib/Pizzicato.js"></script-->
-
-    <!-- Example -->
-    <script src="./Example.js"></script>
-    <script>
-      window.addEventListener("load", function(){
-        new Example();
-      });
-    </script>
 
   </head>
 
